<resources>
    <string name="app_name">Tellso</string>
    <string name="wording_register">Sign up to see inspiring stories from your friends.</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_login">Log in</string>
    <string name="have_an_account">Have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="et_email_error_message">Email address is invalid</string>
    <string name="et_password_error_message">Passwords must be at least 8 characters</string>
    <string name="language">Language</string>
    <string name="title_home">Home</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_story">Create Story</string>
    <string name="logout">Log out</string>
    <string name="create_story">Create Story</string>
    <string name="post">POST</string>
    <string name="desc">What\'s on your mind?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="story_username">Name</string>
    <string name="story_pict">Story Pict</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet. Qui sapiente molestias sit reiciendis omnis sit ratione debitis qui quam reiciendis vel accusamus aliquid. Id fugiat voluptatum sed aliquid saepe eum neque deserunt in aspernatur incidunt id fuga fugit. Quo suscipit veritatis et corporis explicabo et dolor amet ut iste veritatis quo dolorum internos id corporis quis.</string>
    <string name="dummy_date">MARCH 7</string>
    <string name="data_not_found">Oops, no data found</string>
    <string name="error_message">Sorry, there was a problem with your request </string>
    <string name="register_success">Register success</string>
    <string name="login_success">Login success</string>
    <string name="profile_user">profile_user</string>
    <string name="detail_toolbar_title">%s\'s story</string>
    <string name="select_image">Select image from</string>
    <string name="upload_image">upload image illustration</string>
    <string name="empty_desc_error">Oops, this story is empty</string>
    <string name="empty_img_error">Please select an image</string>
    <string name="post_success">Your story has been posted</string>
    <string name="post_failed">Your story failed to post</string>
    <string name="disable_btn">Passwords must be at least 8 characters</string>
    <string name="add_location">Location</string>
    <string name="activate_location_message">Please enable your location services</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="loading_error_message">Couldn\'t fetch data</string>
    <string name="add_location_story">Add location</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="denied_action">Change setting</string>
</resources>