<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tellso.ui.home.HomeFragment"
        android:label="@string/app_name"
        android:textColor="@color/black"
        android:fontFamily="@font/smooth"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/create_story"
        android:name="com.example.tellso.ui.create.CreateStoryFragment"
        android:label="@string/create_story"
        tools:layout="@layout/fragment_create_story" />

    <fragment
        android:id="@+id/logout"
        android:name="com.example.tellso.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout"
        />

</navigation>